# literatureExportConverter

./: README.md  convert.py  pyproject.toml  requirements.txt  semantic_mapping.yaml  syntax_mapping.yaml
